# langchain-agenticai-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
generativeai/: 1-langchainintro.ipynb  2-tools.ipynb  3-genai-inbuilt.ipynb  4-agentwithmultipletools.ipynb  5-messages.ipynb  6-structuredoutput.ipynb  7-shorttermmemory.ipynb  8-middleware.ipynb
